@@ -61,6 +61,35 @@ size_t iwhex2bin(const char *hex, int hexlen, char *out, int max) {
   return vpos;
 }
 
+char* iwbin2hex(
+  char* const                hex,
+  const size_t               hex_maxlen,
+  const unsigned char* const bin,
+  const size_t               bin_len) {
+
+  size_t i = (size_t) 0U;
+  unsigned int x;
+  int b;
+  int c;
+
+  if ((bin_len >= SIZE_MAX / 2) || (hex_maxlen <= bin_len * 2U)) {
+    //errx(2, "bin2hex length wrong");
+    return 0;
+  }
+  while (i < bin_len) {
+    c = bin[i] & 0xf;
+    b = bin[i] >> 4;
+    x = (unsigned char) (87U + c + (((c - 10U) >> 8) & ~38U)) << 8
+        | (unsigned char) (87U + b + (((b - 10U) >> 8) & ~38U));
+    hex[i * 2U] = (char) x;
+    x >>= 8;
+    hex[i * 2U + 1U] = (char) x;
+    i++;
+  }
+  hex[i * 2U] = 0U;
+  return hex;
+}
+
 int iwitoa(int64_t v, char *buf, int max) {
 #define ITOA_SZSTEP(_step) if ((ret += (_step)) >= max) { \
     *ptr = 0; \
@@ -105,7 +134,7 @@ int iwitoa(int64_t v, char *buf, int max) {
 #undef ITOA_SZSTEP
 }
 
-char *iwftoa(long double n, char s[static IWFTOA_BUFSIZE]) {
+char* iwftoa(long double n, char s[static IWFTOA_BUFSIZE]) {
   static double PRECISION = 0.00000000000001;
   // handle special cases
   if (isnan(n)) {
